# cute-clay

./: .clangd  .gitmodules  CMakeLists.txt  build  watch
assets/: frame.png-autosave.kra
cmake/: linux.cmake
src/: CMakeLists.txt  clay.c  cute_9_patch.c  cute_9_patch.h  cute_clay.c  cute_clay.h  host_main.c  plugin_interface.h  plugin_main.c
